<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="25dp"
            android:paddingLeft="25dp"
            android:textStyle="bold"
            android:text="@string/text_connectionHelp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/connection_option_hotspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/hotspot" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:paddingBottom="25dp"
                android:textStyle="bold"
                android:text="Set up Hotspot"/>

            <ImageView
                android:id="@+id/connection_option_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/qr"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:textStyle="bold"
                android:text="Scan QR Code"/>


        </LinearLayout>





        <ImageView
            android:visibility="gone"
            android:id="@+id/connection_option_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:srcCompat="@drawable/ic_help_circle_white_24dp"
            app:tint="?colorSecondary" />
        <ImageView
            android:visibility="gone"
            android:id="@+id/connection_option_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:srcCompat="@drawable/ic_wifi_white_24dp"
            app:tint="?colorSecondary" />
        <ImageView
            android:visibility="gone"
            android:id="@+id/connection_option_manual_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:srcCompat="@drawable/ic_ip_white_24dp"
            app:tint="?colorSecondary" />







        <RelativeLayout
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/short_content_width_padding"
            android:layout_marginRight="@dimen/short_content_width_padding">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/connection_option_devices"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="3dp"
                android:text="@string/butn_open" />

            <TextView
                style="@style/CondensedTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/connection_option_devices"
                android:layout_toLeftOf="@id/connection_option_devices"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/text_useKnownDevice" />

        </RelativeLayout>

<!--        <fragment-->
<!--            android:id="@+id/connection_option_device_list"-->
<!--            android:name="com.t3g.lightspeed.fragment.CustomNetworkDeviceListFragment"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="260dp"-->
<!--            android:tag="deviceListFragment" />-->

    </LinearLayout>
</RelativeLayout>